--- a/ZooWPFApp/MainWindow.xaml
+++ b/ZooWPFApp/MainWindow.xaml
@@ -4,6 +4,7 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:ZooWPFApp"
+        xmlns:model="clr-namespace:ZooModels;assembly=ZooModels"
         mc:Ignorable="d"
         Title="MainWindow" SizeToContent="WidthAndHeight">
     <Window.DataContext>
@@ -16,16 +17,16 @@
             <Button Content="Start/Stop Timer" Command="{Binding StartStopCmd}"/>
             <Button Content="Next Step" Command="{Binding StepCmd}"/>
             <Label Content="Add Animals"/>
-            <Button Content="Add Monkey" Command="{Binding AddAnimalCmd}" CommandParameter="{x:Type local:Monkey}"/>
-            <Button Content="Add Lion" Command="{Binding AddAnimalCmd}" CommandParameter="{x:Type local:Lion}"/>
-            <Button Content="Add Elephant" Command="{Binding AddAnimalCmd}" CommandParameter="{x:Type local:Elephant}"/>
+            <Button Content="Add Monkey" Command="{Binding AddAnimalCmd}" CommandParameter="{x:Type model:Monkey}"/>
+            <Button Content="Add Lion" Command="{Binding AddAnimalCmd}" CommandParameter="{x:Type model:Lion}"/>
+            <Button Content="Add Elephant" Command="{Binding AddAnimalCmd}" CommandParameter="{x:Type model:Elephant}"/>
             <Label Content="Feed"/>
-            <Button Content="Feed Animals" Command="{Binding FeedAnimalsCmd}" CommandParameter="{x:Type local:Animal}"/>
-            <Button Content="Feed Monkeys" Command="{Binding FeedAnimalsCmd}" CommandParameter="{x:Type local:Monkey}"/>
-            <Button Content="Feed Lions" Command="{Binding FeedAnimalsCmd}" CommandParameter="{x:Type local:Lion}"/>
-            <Button Content="Feed Elephants" Command="{Binding FeedAnimalsCmd}" CommandParameter="{x:Type local:Elephant}"/>
+            <Button Content="Feed Animals" Command="{Binding FeedAnimalsCmd}" CommandParameter="{x:Type model:Animal}"/>
+            <Button Content="Feed Monkeys" Command="{Binding FeedAnimalsCmd}" CommandParameter="{x:Type model:Monkey}"/>
+            <Button Content="Feed Lions" Command="{Binding FeedAnimalsCmd}" CommandParameter="{x:Type model:Lion}"/>
+            <Button Content="Feed Elephants" Command="{Binding FeedAnimalsCmd}" CommandParameter="{x:Type model:Elephant}"/>
         </StackPanel>
-        <ListBox ItemsSource="{Binding Animals}">
+        <ListBox ItemsSource="{Binding Zoo.Animals}">
             <ListBox.ItemTemplate>
                 <DataTemplate>
                     <Label Content="{Binding Name}"/>
