--- a/ZooXamarinApp/ZooXamarinApp/MainPage.xaml
+++ b/ZooXamarinApp/ZooXamarinApp/MainPage.xaml
@@ -19,7 +19,11 @@
 
             <Button Grid.Row="3" Text="Step Timer" Command="{Binding StepCmd}"/>
             <Button Grid.Row="4" Text="Start/Stop Timer" Command="{Binding StartStopCmd}"/>
-            <Entry Grid.Row="4" Grid.Column="1" Text="{Binding Interval}" Keyboard="Numeric"/>
+            <Entry Grid.Row="4" Grid.Column="1" Text="{Binding Interval}" Keyboard="Numeric">
+                <Entry.Behaviors>
+                    <local:PositiveIntegerBehavior/>
+                </Entry.Behaviors>
+            </Entry>
         </Grid>
         
 
